--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- HEADER -->
   <header class="site-header">
     <div class="header-left">
-      <img src="assets/msproductslogo.png" alt="MS PRODUCTS" class="site-logo" />
+      <img src="msproductslogo.png" alt="MS PRODUCTS" class="site-logo" />
       <div class="brand">
         <div class="brand-name">MS PRODUCTS</div>
         <div class="brand-tag">Where Luxury Meets Leather</div>
@@ -138,3 +138,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
