--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <!-- HERO -->
   <!-- Inline style points to assets/hero-bg.jpg. If you use a different filename, change it here. -->
-  <section class="hero" id="hero" style="background-image: url('assets/back.jpg');">
+  <section class="hero" id="hero" style="background-image: url('back.jpg');">
     <div class="hero-inner">
       <h1>Where Luxury Meets Leather</h1>
       <p>Discover handcrafted pieces inspired by timeless elegance and modern craftsmanship.</p>
@@ -122,7 +122,7 @@
     <!-- ORDER CONFIRMATION -->
     <section id="orderConfirmation" class="order-confirmation hidden" aria-hidden="true">
       <div class="confirm-card">
-        <img src="assets/msproductslogo.png" alt="logo" class="confirm-logo" />
+        <img src="msproductslogo.png" alt="logo" class="confirm-logo" />
         <h2>Thank you — Order placed</h2>
         <p>Your order id: <strong id="orderId"></strong></p>
         <button class="btn-primary" onclick="backToShop()">Continue Shopping</button>
@@ -138,4 +138,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
