--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </aside>
 
   <!-- HERO -->
-  <!-- Inline style points to assets/hero-bg.jpg. If you use a different filename, change it here. -->
+  <!-- Inline style points to hero-bg.jpg. If you use a different filename, change it here. -->
   <section class="hero" id="hero" style="background-image: url('back.jpg');">
     <div class="hero-inner">
       <h1>Where Luxury Meets Leather</h1>
@@ -138,5 +138,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
-
